feat: translate confirm email message

--- a/src/modules/users/views/confirm_user.hbs
+++ b/src/modules/users/views/confirm_user.hbs
@@ -4,10 +4,10 @@
     </div>
     <div style="font-size: 16px; text-align: left;">
       <div style="line-height: 150%;">
-        <div style="font-size: 20px;">Hi {{name}},</div>
+        <div style="font-size: 20px;">Olá {{name}},</div>
         
         <div style="margin: 15px 0;">
-          Thanks for creating a Template API account. Please verify your email address by clicking the button below.
+          Obrigado por criar uma conta no {{app_name}}. Por favor, confirme seu e-mail clicando no link abaixo.
         </div>
         
       </div>
@@ -25,12 +25,12 @@
            cursor: pointer;
            letter-spacing: 0.5px;
            border-radius: 4px;"
-          >Verify email address
+          >Confirmar endereço de e-mail
         </a>
       </div>
       <div style="line-height: 150%;">
         <div style="color:#828282; margin: 15px 0 75px;">
-          - Template API Team
+          - Equipe do {{app_name}}
         </div>
       </div>
     </div>
